--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
     </div>
   </nav>
-  <div class="page-header header-filter data-parallax="true" style="background-image: url('/img/background4.jpg')">
+  <div class="page-header data-parallax="true" style="background-image: url('/img/background4.jpg')">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -90,28 +90,40 @@
         <div class="row">
           <div class="col-md-8 ml-auto mr-auto">
             <h2 class="title">¿Quien soy?</h2>
-            <h5 class="description text-dark"> Una breve descripcion de ti y de lo que ofreces a la comunidad. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum laudantium quae illum ut placeat autem provident delectus officia odit repellendus. Quia facilis voluptates odit rem delectus cupiditate deleniti magni fugit.</h5>
+            <h5 class="description text-dark">José Serrano, después de terminar mis estudios de Técnico agrícola viticultura enología, decidí irme de Santiago, con rumbo a la región del maule a una comuna llamada Yerbas Buenas, donde mis primeros años trabajé en huertos frutales y packing como encargado de campo y control de calidad. Llegue a trabajar a la municipalidad invitado, por un programa para realizar un proyecto, la cual resulto muy bueno, adonde trabaje con un grupo de asistentes sociales. Donde me permití desarrollar una parte social que no conocía. Donde el proyecto financiado por el FOSIS y ejecutado por la municipalidad, trabajando con un grupo de gente de escasos recursos, donde se le enseñaba a producir sus propias hortalizas y así mejorando la alimentación familiar.</h5>
           </div>
         </div>
         <div class="features">
           <div class="row">
             <div class="col-md-4">
               <div class="info">
-                <div class="icon icon-info">
-                  <i class="material-icons">chat</i>
-                </div>
-                <h4 class="info-title">Compromiso Social</h4>
-                  <p class="text-dark" ><strong></strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione architecto neque culpa vel, corrupti vitae nesciunt, eos laboriosam ut consequuntur libero id cupiditate sint nisi nam illum? Amet, totam tempora.</p>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="info">
                 <div class="icon icon-success">
                   <i class="material-icons">verified_user</i>
                 </div>
                 <h4 class="info-title">Transparencia</h4>
-                  <p class="text-dark" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, dolore corrupti illum sit fugit possimus tempora necessitatibus ea eius natus quisquam exercitationem aliquid sapiente nisi accusantium iure culpa quidem unde.</p>
+                  <p class="text-dark">Asumir un compromiso de fiscalizador y velar que todos los
+                    fondos y proyectos sea ejecutados de buena forma, y así mejor el bienestar de
+                    los habitantes de la comuna.</p>
                 </div>
+            </div>
+            <div class="col-md-4">
+              <div class="info">
+                <div class="icon icon-info">
+                  <i class="material-icons">chat</i>
+                </div>
+                <h4 class="info-title">Compromiso Social</h4>
+                  <p class="text-dark" >Trabajar y ayudar a los emprendedores, a que puedan
+                    desarrollar mejor sus emprendimientos y que puedan tener un bienestar de
+                    estos. Ayudar y fortalecer al centro de madres y adultos mayores a que tengan
+                    un mejor bienestar social. Mejorar la conectividad de la comuna y
+                    desarrollando nuevas ciclovías, para mejorar el traslado de nuestros
+                    temporeros agrícolas para que se muevan de forma más segura a sus trabajos y
+                    hogares. También se puede usar para los apasionados al deporte ciclístico que
+                    tengan mejore rutas recreativas. Hacer un desarrollo turístico de la comuna,
+                    donde poder juntar a cada emprendedor turístico a formar un grupo donde se
+                    pueda fortalecer cada uno de ellos, con actividades para demostrar los lindos
+                    atributos de la comuna.</p>
+              </div>
             </div>
             <div class="col-md-4">
               <div class="info">
@@ -119,7 +131,9 @@
                   <i class="material-icons">fingerprint</i>
                 </div>
                 <h4 class="info-title">Autocrítica</h4>
-                <p class="text-dark" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut, officia facilis corporis incidunt voluptatibus inventore, harum rem nisi quod error reiciendis amet explicabo cum fugit blanditiis consequuntur placeat sequi soluta.</p>
+                <p class="text-dark" >Me considero que soy una persona que le gusta mucho trabajar, y
+                  más si puedo ayudar a las personas con mi trabajo. No me gusta la injusticia
+                  para mí y las demás personas.</p>
               </div>
             </div>
           </div>
@@ -135,16 +149,16 @@
                   <div class="col-md-5">
                     <div class="card-header card-header-image">
                       <a href="#">
-                        <img class="img" src="../img/faces/card-profile1-square.jpg">
+                        <img class="img" src="/img/faces/luzhernandez.jpg">
                       </a>
                     </div>
                   </div>
                   <div class="col-md-7">
                     <div class="card-body">
-                      <h4 class="card-title">Don Roberto</h4>
-                      <h6 class="category text-muted">Abranquil</h6>
+                      <h4 class="card-title">Luz Hernández</h4>
+                      <h6 class="category text-muted">Secretaria APR Maitencillo</h6>
                       <p class="card-description text-dark">
-                        Don't be scared of the truth because we need to restart the human foundation in truth...
+                        José, gracias por ser la persona amable, correcta, responsable y muy abierta a escuchar a las personas con las que trabajó en Dideco, me encuentro entre ellas y agradezco el apoyo que me brindó en esos momentos, cuando fue mi feje y también por la importancia que siempre mostro en cada una de mis inquietudes como dirigente social.
                       </p>
                     </div>
                     <div class="card-footer justify-content-center">
@@ -274,13 +288,12 @@
       <nav class="float-left">
         <ul>
           <li>
-            <a href="https://www.diegovasquez.cl/">
-              Diego Vasquez
+            <a href="#">
             </a>
           </li>
           <li>
             <a href="https://www.joseserranoconcejal.cl/">
-              José Serrano
+              José Serrano Concejal
             </a>
           </li>
         </ul>
