cambios en la reseñas
se agrego la reseña de luis llancamil

--- a/index.html
+++ b/index.html
@@ -182,16 +182,19 @@
                   <div class="col-md-5">
                     <div class="card-header card-header-image">
                       <a href="#pablo">
-                        <img class="img" src="../img/faces/card-profile6-square.jpg">
+                        <img class="img" src="/img/faces/luisllancamil.jpg">
                       </a>
                     </div>
                   </div>
                   <div class="col-md-7">
                     <div class="card-body">
-                      <h4 class="card-title">Sra. Natalia</h4>
-                      <h6 class="category text-muted">Santa Ana de Queri</h6>
+                      <h4 class="card-title">Luis Llancamil</h4>
+                      <h6 class="category text-muted">Ingeniero Agrícola</h6>
                       <p class="card-description text-dark">
-                        Don't be scared of the truth because we need to restart the human foundation in truth...
+                        José. Hace unos años tuve el agrado de trabajar a tu lado, y conocer al gran
+profesional agrícola que eres. Aprendí mucho junto a ti, tu forma de resolver
+los problemas que se van presentando y además de lo profesional, todos los
+grandes valores que reflejas día a día. Gracias José.
                       </p>
                     </div>
                     <div class="card-footer justify-content-center">
@@ -212,7 +215,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6">
+            <!-- <div class="col-md-6">
               <div class="card card-profile card-plain">
                 <div class="row">
                   <div class="col-md-5">
@@ -244,8 +247,8 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="col-md-6">
+            </div> -->
+            <!-- <div class="col-md-6">
               <div class="card card-profile card-plain">
                 <div class="row">
                   <div class="col-md-5">
@@ -277,7 +280,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
