--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
           <h1 class="title">Yerbas Buenas 2021</h1>
           
           <br>
-          <a href="#" target="_blank" class="btn btn-danger btn-raised btn-lg">
+          <!-- <a href="#" target="_blank" class="btn btn-danger btn-raised btn-lg">
             <i class="fa fa-play"><h1>A-1</h1></i>
-          </a>
+          </a> -->
         </div>
       </div>
     </div>
