--- a/index.html
+++ b/index.html
@@ -67,23 +67,22 @@
       </div>
     </div>
   </nav>
-  <div class="page-header data-parallax="true" style="background-image: url('/img/background4.jpg')">
+  <div class="page-header " data-parallax="true" style="background-image: url('/img/background1.jpg')">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h1 class="display-1"><strong>José Serrano</strong></h1>
+          <h1 class="display-1"><strong>José Serrano Concejal</strong></h1>
           <h2>"Por un mejor Yerbas Buenas".</h2>
-          <h1 class="title">Concejal</h1>
-          <h1 class="title">Yerbas Buenas 2021</h1>
-          
           <br>
-          <!-- <a href="#" target="_blank" class="btn btn-danger btn-raised btn-lg">
-            <i class="fa fa-play"><h1>A-1</h1></i>
-          </a> -->
+          <a href="#" target="_blank" class="btn btn-danger btn-raised btn-lg">
+            <i class="fa fa-play"></i> vota a-0
+          </a>
         </div>
       </div>
     </div>
   </div>
+
+  
   <div class="main main-raised">
     <div class="container">
       <div class="section text-center">
@@ -143,7 +142,8 @@
         <h2 class="title">Mi trabajo para la comunidad</h2>
         <div class="team">
           <div class="row">
-            <div class="col-md-6">
+
+            <div class="col-md-4">
               <div class="card card-profile card-plain">
                 <div class="row">
                   <div class="col-md-5">
@@ -158,7 +158,7 @@
                       <h4 class="card-title">Luz Hernández</h4>
                       <h6 class="category text-muted">Secretaria APR Maitencillo</h6>
                       <p class="card-description text-dark">
-                        José, gracias por ser la persona amable, correcta, responsable y muy abierta a escuchar a las personas con las que trabajó en Dideco, me encuentro entre ellas y agradezco el apoyo que me brindó en esos momentos, cuando fue mi feje y también por la importancia que siempre mostro en cada una de mis inquietudes como dirigente social.
+                        "José, gracias por ser la persona amable, correcta, responsable y muy abierta a escuchar a las personas con las que trabajó en Dideco, me encuentro entre ellas y agradezco el apoyo que me brindó en esos momentos, cuando fue mi feje y también por la importancia que siempre mostro en cada una de mis inquietudes como dirigente social".
                       </p>
                     </div>
                     <div class="card-footer justify-content-center">
@@ -176,7 +176,8 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6">
+            
+            <div class="col-md-4">
               <div class="card card-profile card-plain">
                 <div class="row">
                   <div class="col-md-5">
@@ -191,10 +192,10 @@
                       <h4 class="card-title">Luis Llancamil</h4>
                       <h6 class="category text-muted">Ingeniero Agrícola</h6>
                       <p class="card-description text-dark">
-                        José. Hace unos años tuve el agrado de trabajar a tu lado, y conocer al gran
+                        "José. Hace unos años tuve el agrado de trabajar a tu lado, y conocer al gran
 profesional agrícola que eres. Aprendí mucho junto a ti, tu forma de resolver
 los problemas que se van presentando y además de lo profesional, todos los
-grandes valores que reflejas día a día. Gracias José.
+grandes valores que reflejas día a día. Gracias José".
                       </p>
                     </div>
                     <div class="card-footer justify-content-center">
@@ -215,22 +216,22 @@ grandes valores que reflejas día a día. Gracias José.
                 </div>
               </div>
             </div>
-            <!-- <div class="col-md-6">
+            <div class="col-md-4">
               <div class="card card-profile card-plain">
                 <div class="row">
                   <div class="col-md-5">
                     <div class="card-header card-header-image">
                       <a href="#">
-                        <img class="img" src="../img/faces/card-profile4-square.jpg">
+                        <img class="img" src="./img/faces/feliperodriguez.jpeg">
                       </a>
                     </div>
                   </div>
                   <div class="col-md-7">
                     <div class="card-body">
-                      <h4 class="card-title">Andrea</h4>
-                      <h6 class="category text-muted">Maitencillo</h6>
+                      <h4 class="card-title">Felipe Rodríguez</h4>
+                      <h6 class="category text-muted">Vecino de Yerbas Buenas</h6>
                       <p class="card-description text-dark">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto.
+                        "José serrano, gracias por el gran apoyo que me brindaste cuando llegue acá a Chile desde hace dos años, ya que como persona eres muy agradable, humanitario y como jefe eres un buen líder y te agrada ayudar al necesitado".
                       </p>
                     </div>
                     <div class="card-footer justify-content-center">
@@ -247,7 +248,7 @@ grandes valores que reflejas día a día. Gracias José.
                   </div>
                 </div>
               </div>
-            </div> -->
+            </div>
             <!-- <div class="col-md-6">
               <div class="card card-profile card-plain">
                 <div class="row">
