ajustes de responsividad

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
   <div class="page-header " data-parallax="true" style="background-image: url('/img/background1.jpg')">
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
-          <h1 class="display-1"><strong>José Serrano Concejal</strong></h1>
-          <h2>"Por un mejor Yerbas Buenas".</h2>
+        <div class="col-lg-12 col-md-9 col-sm-3">
+          <h1 class="display-2"><strong>José Serrano Concejal</strong></h1>
+          <h2 class="display-3">"Por un mejor Yerbas Buenas".</h2>
           <br>
           <a href="#" target="_blank" class="btn btn-danger btn-raised btn-lg">
             <i class="fa fa-play"></i> vota a-0
